--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
 	<input type="hidden" name="msisdn" th:value="${msisdn}"/>
 	<input type="hidden" name="repeatCode" value="false"/>
 <div class="header" id="header-block">
-	<div class="title">ОнлайнФайлы</div>
+	<div class="title header-text">ОнлайнФайлы</div>
 	<div class="age-limit">18+</div>
 </div>
 
@@ -497,6 +497,5 @@
 	</div>
 </div>
 <div id="overlay-backdrop" class="modal-backdrop" style="display: none"></div>
-<script src='https://ph-tc.github.io/wap-autotests/autotest.beeline.js'></script>
 </body>
 </html>
